--- a/conf/app.ini
+++ b/conf/app.ini
@@ -27,15 +27,15 @@ WriteTimeout = 60
 
 [database]
 Type = mysql
-User = root
-Password = batur
-Host = db
+User = suosuoli
+Password = suosuoli
+Host = localhost
 Name = blog
 TablePrefix = blog_
 
 [redis]
-Host = 127.0.0.1:6379
-Password =
+Host = localhost:6379
+Password = foo@bar
 MaxIdle = 30
 MaxActive = 30
 IdleTimeout = 200
